cmake_minimum_required(VERSION 2.8)
SET(LONGBIT 64)

SET(PROJECTNAME asynctest)  

SET(INCLUDE_DIR 
    ./public/include
    ./public/include/hpr
    ./public/include/hlog)
  
SET(LIB_DIR ./ 
    ./public/lib/linux${LONGBIT})
  
SET(LINKS_NAME   
    hpr
    hlog
    )

PROJECT(${PROJECTNAME})
AUX_SOURCE_DIRECTORY(./async_socket_test SRC_LIST)
SET(LIBRARY_OUTPUT_PATH 
    ./bin)
#SET(EXECUTABLE_OUTPUT_PATH 
    ./bin)


ADD_DEFINITIONS(-g -W -Wall -D_REENTRANT -D_FILE_OFFSET_BITS=${LONGBIT} -DAC_HAS_INFO
-DAC_HAS_WARNING -DAC_HAS_ERROR -DAC_HAS_CRITICAL -DTIXML_USE_STL
-DAC_HAS_DEBUG -DLINUX_DAEMON)

INCLUDE_DIRECTORIES(${INCLUDE_DIR})
LINK_DIRECTORIES(${LIB_DIR})


ADD_EXECUTABLE(${PROJECTNAME} ${SRC_LIST})
#ADD_LIBRARY(${PROJECTNAME} SHARED ${SRC_LIST})
TARGET_LINK_LIBRARIES(${PROJECTNAME} ${LINKS_NAME})



